--- a/admin.html
+++ b/admin.html
@@ -375,7 +375,7 @@
 
     <div id="auth-container">
         <div class="login-card">
-            <img src="https://i.ibb.co/L8yN5s2/Logo-Lobster-Shack.png" alt="Logo" class="logo">
+            <img src="https://lh3.googleusercontent.com/d/1Pq8Ign3a0Wm0SHU220ov5b-jnfGDBUoO" class="logo">
             <h1>Admin Panel Login</h1>
             <form id="login-form">
                 <div class="form-group">
@@ -397,7 +397,7 @@
 
         <aside class="sidebar">
             <div class="logo-container">
-                <img src="https://i.ibb.co/L8yN5s2/Logo-Lobster-Shack.png" alt="Logo" class="logo">
+                <img src="https://lh3.googleusercontent.com/d/1Pq8Ign3a0Wm0SHU220ov5b-jnfGDBUoO" alt="Logo" class="logo">
             </div>
             <nav class="sidebar-nav">
                 <ul>
