--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             .ls-main-nav.active { transform: translateY(0); }
             .ls-nav-links { flex-direction: column; text-align: center; gap: 2.5rem; }
             .ls-nav-links a { font-size: 1.8rem; padding: .85rem 0; width: 100%; }
-            .ls-nav-links a:after { width: 60%; }
+            .ls-nav-links a:after { left: 50%; transform: translateX(-50%); width: 60% !important; }
             .ls-header-actions { z-index: 1001; }
             .ls-mobile-menu-toggle { display: block; }
         }
@@ -345,6 +345,121 @@
             .ls-modal-content { padding: 1.5rem; }
             .ls-modal-body .modal-text h3 { font-size: 2rem; }
             .ls-modal-body .modal-text .modal-price { font-size: 1.5rem; }
+        }
+
+        /* ======== NEW: DESKTOP RE-STYLING (min-width: 993px) ======== */
+        @media (min-width: 993px) {
+            /* -- HEADER & NAVIGATION -- */
+            .ls-mobile-menu-toggle {
+                display: none; /* Sembunyikan toggle menu */
+            }
+            .ls-main-header .ls-container {
+                display: grid;
+                grid-template-columns: auto 1fr auto; /* Layout: Logo | Nav | Actions */
+                align-items: center;
+                gap: 2rem;
+            }
+            .ls-main-nav {
+                /* Balikkan style mobile */
+                position: static;
+                height: auto;
+                width: auto;
+                background-color: transparent;
+                flex-direction: row;
+                justify-content: center;
+                transform: none;
+                padding-top: 0;
+                z-index: auto;
+            }
+            .ls-main-nav.active { transform: none; }
+            .ls-nav-links {
+                flex-direction: row;
+                gap: 3.5rem; /* Jarak antar menu */
+            }
+            .ls-nav-links a {
+                font-size: 1.1rem; /* Ukuran font menu desktop */
+                padding: .85rem 0;
+            }
+            .ls-header-actions {
+                z-index: auto;
+            }
+
+            /* -- HERO / BANNER -- */
+            .ls-hero-section {
+                min-height: 750px; /* Tinggi minimal untuk desktop */
+                height: 100vh; /* Gunakan tinggi viewport penuh */
+            }
+
+            /* -- HISTORY TIMELINE (Horizontal & Winding) -- */
+            .ls-timeline {
+                max-width: none; /* Hapus batasan lebar */
+                display: flex; /* Gunakan flexbox untuk menata item secara horizontal */
+                justify-content: space-between;
+                margin: 5rem auto 0;
+                position: relative;
+            }
+            /* Garis Horizontal di Tengah */
+            .ls-timeline:after {
+                content: '';
+                position: absolute;
+                width: 100%;
+                height: 3px;
+                left: 0;
+                top: 100px; /* Posisi vertikal garis dari atas kontainer */
+                transform: none;
+                margin-left: 0;
+                background-color: var(--ls-color-border);
+            }
+            .ls-timeline-item {
+                flex: 1; /* Setiap item akan mengambil ruang yang sama */
+                position: relative;
+                width: auto;
+                padding: 0 20px;
+                text-align: center !important;
+                left: 0 !important;
+            }
+            /* Ikon Lobster di Garis Tengah */
+            .ls-timeline-item:after {
+                top: 100px; /* Posisikan ikon agar pas di garis tengah */
+                left: 50%;
+                transform: translate(-50%, -50%); /* Center ikon */
+                right: auto;
+            }
+            .ls-timeline-content {
+                position: relative;
+            }
+            /* Konektor dari item ke garis tengah */
+            .ls-timeline-content::before {
+                content: '';
+                position: absolute;
+                width: 3px;
+                height: 40px; /* Panjang garis konektor */
+                background-color: var(--ls-color-border);
+                left: 50%;
+                transform: translateX(-50%);
+            }
+            /* Styling untuk item di ATAS garis (urutan genap) */
+            .ls-timeline-item:nth-child(even) .ls-timeline-content {
+               margin-bottom: 60px; /* Ruang antara teks dan ikon */
+            }
+            .ls-timeline-item:nth-child(even) .ls-timeline-content::before {
+                top: 100%; /* Konektor menunjuk ke bawah */
+            }
+            /* Styling untuk item di BAWAH garis (urutan ganjil) */
+            .ls-timeline-item:nth-child(odd) {
+               padding-top: 160px; /* Dorong seluruh item ke bawah agar kontennya berada di bawah garis */
+            }
+            .ls-timeline-item:nth-child(odd) .ls-timeline-content::before {
+                bottom: 100%; /* Konektor menunjuk ke atas */
+            }
+
+            /* -- MENU GRID (4 Cards per row) -- */
+            /* Terapkan pada layar yang cukup lebar untuk 4 kolom */
+            @media (min-width: 1360px) {
+                .ls-menu-grid {
+                    grid-template-columns: repeat(4, 1fr);
+                }
+            }
         }
     </style>
 </head>
@@ -471,7 +586,7 @@
 
     <div class="ls-modal-overlay" id="ls-product-modal-overlay">
         <div class="ls-modal-content" id="ls-product-modal-content">
-            <button class="ls-modal-close" id="ls-modal-close-btn" aria-label="Close modal">&times;</button>
+            <button class="ls-modal-close" id="ls-modal-close-btn" aria-label="Close modal">×</button>
             <div class="ls-modal-body" id="ls-modal-body">
                 </div>
         </div>
@@ -561,7 +676,7 @@
     const renderHistory = () => {
         if (!siteData.history || siteData.history.length === 0) return;
         domElements.historyTimeline.innerHTML = [...siteData.history]
-            .sort((a, b) => b.sort_order - a.sort_order)
+            .sort((a, b) => a.sort_order - b.sort_order) // Sort ascending for horizontal layout
             .map((item, index) => `
             <div class="ls-timeline-item ${index % 2 === 0 ? 'left' : 'right'}" data-aos="fade-up">
                 <div class="ls-timeline-content">
@@ -749,5 +864,3 @@
     </script>
 </body>
 </html>
-
-
