--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             --ls-font-body: 'TOLYER Bold', sans-serif; /* MODIFIED FONT */
             --ls-color-primary: #D84B42; /* Merah Lobster */
             --ls-color-secondary: #2D4C5E; /* Biru Gelap / Abu-abu Kebiruan */
-            --ls-color-background: #F9F7F2; /* Refined Cream */
+            --ls-color-background: #fff5e9; /* Refined Cream */
             --ls-color-surface: #FFFFFF; /* Putih Bersih */
             --ls-color-text: #333333;
             --ls-color-text-light: #6c757d;
