--- a/index.html
+++ b/index.html
@@ -152,5 +152,7 @@
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
 
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/floating.js"></script>
+
 </body>
 </html>
