--- a/index.html
+++ b/index.html
@@ -144,6 +144,34 @@
         </div>
     </div>
 
+
+<div class="ls-fab-container">
+    <div class="ls-fab-menu">
+        <div class="ls-fab-item-group">
+            <div class="ls-fab-submenu-label">
+                <i class="fas fa-utensils"></i>
+            </div>
+            <div class="ls-fab-submenu">
+                <a href="#" id="fab-at-table" class="ls-fab-item-sub" data-tooltip="Sudah di Meja">
+                    <i class="fas fa-chair"></i>
+                </a>
+                <a href="#" id="fab-reservation" class="ls-fab-item-sub" data-tooltip="Reservasi" target="_blank" rel="noopener noreferrer">
+                    <i class="fas fa-calendar-check"></i>
+                </a>
+            </div>
+        </div>
+        <a href="#" id="fab-direction" class="ls-fab-item" data-tooltip="Get Direction" target="_blank" rel="noopener noreferrer">
+            <i class="fas fa-directions"></i>
+        </a>
+        <a href="#" id="fab-whatsapp" class="ls-fab-item" data-tooltip="Chat Admin" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+    <button class="ls-fab-main" aria-label="Open Menu">
+        <i class="fas fa-concierge-bell"></i>
+    </button>
+</div>
+
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
     
