--- a/index.html
+++ b/index.html
@@ -147,23 +147,16 @@
 
 <div class="ls-fab-container">
     <div class="ls-fab-menu">
-        <div class="ls-fab-item-group">
-            <div class="ls-fab-submenu-label">
-                <i class="fas fa-utensils"></i>
-            </div>
-            <div class="ls-fab-submenu">
-                <a href="#" id="fab-at-table" class="ls-fab-item-sub" data-tooltip="Sudah di Meja">
-                    <i class="fas fa-chair"></i>
-                </a>
-                <a href="#" id="fab-reservation" class="ls-fab-item-sub" data-tooltip="Reservasi" target="_blank" rel="noopener noreferrer">
-                    <i class="fas fa-calendar-check"></i>
-                </a>
-            </div>
-        </div>
-        <a href="#" id="fab-direction" class="ls-fab-item" data-tooltip="Get Direction" target="_blank" rel="noopener noreferrer">
+        <a href="#" id="fab-dine-in" class="ls-fab-item">
+            <span>Dine In</span>
+            <i class="fas fa-utensils"></i>
+        </a>
+        <a href="#" id="fab-direction" class="ls-fab-item" target="_blank" rel="noopener noreferrer">
+            <span>Get Direction</span>
             <i class="fas fa-directions"></i>
         </a>
-        <a href="#" id="fab-whatsapp" class="ls-fab-item" data-tooltip="Chat Admin" target="_blank" rel="noopener noreferrer">
+        <a href="#" id="fab-whatsapp" class="ls-fab-item" target="_blank" rel="noopener noreferrer">
+            <span>Chat Admin</span>
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
@@ -171,6 +164,7 @@
         <i class="fas fa-concierge-bell"></i>
     </button>
 </div>
+
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
