--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,7 @@
 
     <div id="auth-container">
         <div class="login-card">
-            <img src="https://i.ibb.co/p3wcz5Y/logo-placeholder.png" class="logo">
+            <img src="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9" class="logo">
             <h1>Admin Panel Login</h1>
             <form id="login-form">
                 <div class="form-group">
@@ -38,7 +38,7 @@
 
         <aside class="sidebar">
             <div class="logo-container">
-                <img src="https://i.ibb.co/p3wcz5Y/logo-placeholder.png" alt="Logo" class="logo">
+                <img src="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9" alt="Logo" class="logo">
             </div>
             <nav class="sidebar-nav">
                 <ul>
