--- a/index.html
+++ b/index.html
@@ -15,26 +15,22 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <style>
-        /* === FINAL STYLING REVISIONS === */
+        /* === FINAL STYLING REVISIONS V2 === */
 
         /* 1. Larger Logo in Header */
         .ls-main-header .ls-logo {
             height: 65px; 
         }
 
-        /* 2. Hero Slider Image Position */
+        /* 2. Hero & Menu Image Positioning */
         .ls-hero-slider .ls-slide-background {
             background-size: cover;
-            /* REVISED: Ensure top of the image is always visible */
             background-position: center top; 
         }
-        
-        /* 3. Menu Card Image Position */
         .ls-menu-card-image img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            /* REVISED: Ensure top of the product photo is always visible */
             object-position: top; 
             transition: transform var(--ls-transition-speed) ease;
         }
@@ -42,12 +38,11 @@
             transform: scale(1.08);
         }
 
-        /* 4. "About Us" Section Restyled as an Article */
+        /* 3. "About Us" Article Styling */
         .ls-about-section-content {
             max-width: 800px;
             margin: 0 auto;
-            text-align: left; /* Justify for article look */
-            /* REVISED: Removed box styling */
+            text-align: center; /* Default for mobile */
             background: none;
             box-shadow: none;
             border: none;
@@ -56,23 +51,22 @@
         .ls-about-section-content .about-logo {
             display: block;
             max-height: 80px;
-            margin: 0 auto 2rem auto; /* Center the logo */
+            margin: 0 auto 2rem auto;
         }
         .ls-about-section-content h3 {
-            text-align: center; /* Center the title */
             font-family: var(--ls-font-heading);
             color: var(--ls-color-secondary);
             font-size: clamp(1.8rem, 5vw, 2.2rem);
             margin-bottom: 1.5rem;
         }
         .ls-about-section-content p {
+            text-align: left; /* Justify text for article look */
             font-size: 1.05rem;
             line-height: 1.9;
             color: var(--ls-color-text-light);
             white-space: pre-wrap;
-            margin-bottom: 1rem; /* Spacing between paragraphs */
+            margin-bottom: 1rem;
         }
-        /* REVISED: Drop cap for the first letter */
         .ls-about-section-content p:first-of-type::first-letter {
             font-family: var(--ls-font-heading);
             font-size: 4.5rem;
@@ -85,7 +79,31 @@
             padding-bottom: 2px;
         }
 
-        /* Uniform Menu Card Sizing */
+        /* 4. Desktop Layout for "About Us" Section */
+        @media (min-width: 992px) {
+            .ls-about-section-content {
+                max-width: 100%; /* Allow it to be wider */
+                display: flex;
+                align-items: flex-start; /* Align items to the top */
+                gap: 3rem; /* Space between logo and text */
+                text-align: left; /* Align text to the left */
+            }
+            .ls-about-section-content .about-logo-container {
+                flex: 0 0 150px; /* Logo container fixed width */
+            }
+            .ls-about-section-content .about-logo {
+                max-height: 120px; /* Slightly larger logo on desktop */
+                margin: 0;
+            }
+            .ls-about-section-content .about-text-container {
+                flex: 1; /* Text takes remaining space */
+            }
+            .ls-about-section-content h3 {
+                text-align: left; /* Title aligns with text */
+            }
+        }
+
+        /* 5. Uniform Menu Card Sizing */
         .ls-featured-slider .swiper-wrapper {
             align-items: stretch;
         }
