--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <div class="ls-menu-grid" id="ls-menu-grid" data-aos="fade-up"></div>
             </div>
         </section>
+
         <section id="gallery" class="ls-gallery-section ls-section">
             <div class="ls-container">
                 <div class="ls-section-header" data-aos="fade-up"><span class="ls-subtitle" data-lang-key="gallery_section_subtitle">Our Moments</span><h2 class="ls-title" data-lang-key="gallery_title">Tasteful Memories</h2></div>
@@ -80,7 +81,9 @@
         </section>
     </main>
     
-    <footer class="ls-main-footer"></footer>
+    <footer class="ls-main-footer">
+        </footer>
+
     <div class="ls-modal-overlay" id="ls-product-modal-overlay"></div>
     <div class="ls-cookie-consent" id="ls-cookie-consent"></div>
     <div id="ls-dine-in-modal" class="ls-fab-popup-overlay"></div>
