--- a/index.html
+++ b/index.html
@@ -82,12 +82,109 @@
     </main>
     
     <footer class="ls-main-footer">
-        </footer>
+        <div class="ls-container">
+            <div class="footer-content">
+                <div class="footer-about">
+                    <img src="https://lh3.googleusercontent.com/d/1GIdbd0F7kn0O4L8qEr-25GXSEWbLNVj9" alt="Logo Lobster Shack" class="ls-logo">
+                    <p data-lang-key="footer_description">Experience the finest catch of the day, grilled to perfection, in a cozy and inviting atmosphere. We look forward to welcoming you.</p>
+                </div>
+                <div class="footer-contact">
+                    <h3 class="ls-footer-title" data-lang-key="footer_contact_title">Contact Us</h3>
+                    <div class="ls-footer-contact-info">
+                        <ul>
+                            <li><i class="fas fa-map-marker-alt"></i> <span data-lang-key="footer_address_value">Jl. Raya Pantai Kuta No. 123, Kuta, Bali</span></li>
+                            <li><i class="fas fa-phone"></i> <span data-lang-key="footer_phone_value">+62 812-3456-7890</span></li>
+                            <li><i class="fas fa-envelope"></i> <span data-lang-key="footer_email_value">info@lobstershackbali.com</span></li>
+                            <li><i class="fas fa-clock"></i> <span data-lang-key="footer_hours_value">Daily: 11:00 AM - 10:00 PM WITA</span></li>
+                        </ul>
+                    </div>
+                </div>
+                 <div class="footer-social-links">
+                    <h3 class="ls-footer-title" data-lang-key="footer_follow_title">Follow Us</h3>
+                    <p data-lang-key="footer_follow_text">Stay connected for the latest updates and offers.</p>
+                    <ul class="ls-footer-socials">
+                        <li><a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#" aria-label="TripAdvisor"><i class="fab fa-tripadvisor"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="ls-footer-copyright">
+                <p data-lang-key="footer_copyright">© 2025 Lobster Shack Bali. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
 
-    <div class="ls-modal-overlay" id="ls-product-modal-overlay"></div>
-    <div class="ls-cookie-consent" id="ls-cookie-consent"></div>
-    <div id="ls-dine-in-modal" class="ls-fab-popup-overlay"></div>
-    <div class="ls-fab-container"></div>
+    <div class="ls-modal-overlay" id="ls-product-modal-overlay">
+        <div class="ls-modal-content">
+            <button class="ls-modal-close" id="ls-modal-close-btn" aria-label="Close modal"><i class="fas fa-times"></i></button>
+            <div class="ls-modal-body" id="ls-modal-body"></div>
+        </div>
+    </div>
+
+    <div class="ls-cookie-consent" id="ls-cookie-consent">
+        <div class="ls-container">
+            <p data-lang-key="cookie_text">We use cookies to enhance your Browse experience and to analyze our traffic. By clicking "Accept", you consent to our use of cookies.</p>
+            <button class="ls-btn" id="ls-cookie-accept-btn" data-lang-key="cookie_accept_btn">Accept</button>
+        </div>
+    </div>
+
+    <div id="ls-dine-in-modal" class="ls-fab-popup-overlay">
+        <div class="ls-fab-popup-content">
+            <div class="ls-fab-popup-header">
+                <h2>Dine In Reservation</h2>
+                <button id="ls-dine-in-close-btn" class="ls-fab-popup-close">×</button>
+            </div>
+            <div class="ls-fab-popup-body">
+                <div id="dine-in-step-1">
+                    <p class="popup-info">Complete the form below to get your reservation code.</p>
+                    <div class="popup-form-group">
+                        <label for="customer-name">Your Name</label>
+                        <input type="text" id="customer-name" placeholder="Enter your full name" required>
+                    </div>
+                    <div class="popup-grid">
+                        <div class="popup-form-group">
+                            <label for="reservation-date">Date</label>
+                            <input type="date" id="reservation-date" required>
+                        </div>
+                        <div class="popup-form-group">
+                            <label for="reservation-time">Time</label>
+                            <input type="time" id="reservation-time" required>
+                        </div>
+                    </div>
+                    <button id="generate-code-btn" class="ls-btn">Generate Code</button>
+                </div>
+                <div id="dine-in-step-2" style="display: none;">
+                    <p class="popup-info">Your code has been generated successfully!</p>
+                    <div class="reservation-code-display">
+                        <strong id="reservation-code"></strong>
+                    </div>
+                    <p class="popup-instruction">Please show this code to our staff. The code is saved in your browser.</p>
+                    <button id="cancel-code-btn" class="ls-btn btn-outline">Cancel & Make New</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ls-fab-container">
+        <div class="ls-fab-menu">
+            <a href="#" id="fab-whatsapp" class="ls-fab-item" target="_blank" rel="noopener noreferrer">
+                <span>Chat Admin</span>
+                <i class="fab fa-whatsapp"></i>
+            </a>
+            <a href="#" id="fab-direction" class="ls-fab-item" target="_blank" rel="noopener noreferrer">
+                <span>Get Direction</span>
+                <i class="fas fa-directions"></i>
+            </a>
+            <a href="#" id="fab-dine-in" class="ls-fab-item">
+                <span>Dine In</span>
+                <i class="fas fa-utensils"></i>
+            </a>
+        </div>
+        <button class="ls-fab-main" aria-label="Open Menu">
+            <i class="fas fa-concierge-bell"></i>
+        </button>
+    </div>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
