--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <span class="ls-subtitle" data-lang-key="history_section_subtitle">Our Story</span>
                     <h2 class="ls-title" data-lang-key="history_title">Our Journey</h2>
                 </div>
-                <div id="ls-about-us-article" class="ls-about-section-content" data-aos="fade-up" data-aos-delay="200">
+                <div id="ls-about-us-article" class="ls-about-section-content" data-aos-delay="200">
                     </div>
             </div>
         </section>
